<resources>
    <string name="app_name">IconsCollector</string>
    
    <string name="icons_collector_scr_title">eKay</string>
    <string name="icons_collector_scr_next_action">Next</string>
    <string name="icons_collector_scr_subtitle">Please identify the unreported damage area</string>
    <string name="icons_collector_scr_front_side_label">Front side</string>
    <string name="icons_collector_scr_back_side_label">Back side</string>
    <string name="icons_collector_scr_left_side_label">Left side</string>
    <string name="icons_collector_scr_right_side_label">Right side</string>
    <string name="icons_collector_scr_comment_hint">Comment</string>
    <string name="icons_collector_scr_required_field_error">Required field</string>

    <string name="picture_type_dlg_title">Select picture type</string>
    <string name="picture_type_dlg_capture_image_label">Capture image</string>
    <string name="picture_type_dlg_choose_from_gallery_label">Choose from gallery</string>

    <string name="commen_image_capture_error_message">Can\'t capture an image</string>
</resources>
